# metal-raytracer

./: CMakeLists.txt  README.md  main.cpp
shaders/: camera.metal  color.metal  mandelbrot.metal  math.metal  random.metal  ray.metal  raytrace.metal  skybox.metal  skybox_sample.metal  view.metal
src/: app_delegate.cpp  app_delegate.hpp  file_helper.cpp  file_helper.hpp  matrix_tool.cpp  matrix_tool.hpp  mesh.cpp  mesh.hpp  mesh_tool.cpp  mesh_tool.hpp  renderer.cpp  renderer.hpp  shader_tool.cpp  shader_tool.hpp  shader_types.hpp  view_delegate.cpp  view_delegate.hpp
